<resources>
    <string name="app_name">LoggingViewsAndActivity</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="lessons">Lessons</string>
    <string name="higher_order">HigherOrder</string>
    <string name="sharee">Share</string>
    <string name="views">Views</string>
    <string name="ratings">Ratings</string>
</resources>
