<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:title="@string/logout"
        android:visible="true"
        app:showAsAction="always"
        android:icon="@drawable/exit"/>
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/share"/>
    <item
        android:id = "@+id/save"
        android:enabled = "true"
        android:title = "@string/save"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/save"/>
    <item
        android:id = "@+id/play"
        android:enabled = "true"
        android:title = "@string/play"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/play"/>
    <item
        android:id = "@+id/stop"
        android:enabled = "true"
        android:title = "@string/stop"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/stop"/>
</menu>